<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.capacitacion.gabriel.tarea2.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/tvString"/>
        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintNombre"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_apPaterno"/>
        <EditText
            android:id="@+id/et_apPaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apPaterno"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_apMaterno"/>
        <EditText
            android:id="@+id/et_apMaterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apMaterno"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/sp_sexo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/et_dia"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="dd"
            android:gravity="center_horizontal"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"/>
        <EditText
            android:id="@+id/et_mes"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="mm"
            android:gravity="center_horizontal"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"/>
        <EditText
            android:id="@+id/et_año"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="aaaa"
            android:gravity="center_horizontal"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_estadoNacimiento"/>
        <Spinner
            android:id="@+id/sp_estado"
            android:layout_width="200dp"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>

    <Button
        android:id="@+id/btn_limpiar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_limpiar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_rfc"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_generaRFC"/>
        <Button
            android:id="@+id/btn_curp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_generaCURP"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_resultadoRFC"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:text="@string/resultadoRFC"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tv_resultadoCURP"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:text="@string/resultadoCURP"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"/>

</LinearLayout>